Prevent delete button from wrapping.

--- a/src/sass/myservice-box-new.scss
+++ b/src/sass/myservice-box-new.scss
@@ -191,7 +191,7 @@ hr.box-list-divider {
 }
 
 .edit-content h2 {
-  max-width: 80%;
+  max-width: 75%;
 }
 
 @media screen and (max-width: 375px) {
